added few classes, not cmpleed

--- a/ATMApp/ATMApp.csproj
+++ b/ATMApp/ATMApp.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ATMLib\ATMLib.csproj" />
+    <ProjectReference Include="..\BankLib\BankLib.csproj" />
   </ItemGroup>
 
 </Project>
