--- a/BankApp/BankApp.csproj
+++ b/BankApp/BankApp.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\BankLib\BankLib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Screens\" />
+  </ItemGroup>
+
 </Project>
